--- a/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
@@ -77,7 +77,7 @@ msgid "How to edit documentation"
 msgstr "ドキュメントを編集する方法"
 
 msgid "The Groonga documentation is written in `reStructuredText (.rst)`_ or `Markdown (.md)`_ . These files are located in the ``./doc/source``. Each page of the documentation corresponds to a ``.rst`` file or a ``.md`` file. For Example, if you want to edit this **Introduction** page, you should edit the ``./doc/source/contribution/documentation/introduction.rst`` file. Please find the file you wish to edit and make your changes."
-msgstr "Groongaドキュメントは、`reStructuredText (.rst)`_ または `Markdown`_ で書かれています。Groongaドキュメントのファイルは、``./doc/source`` 配下にあります。それぞれのページに対応した ``.rst`` ファイルまたは、 ``.md`` が必ず１つあります。例えば、この **導入** ページを編集したい場合は、``./doc/source/contribution/documentation/introduction.rst`` ファイルを編集すればよいです。編集したいファイルをみつけて、編集してください。"
+msgstr "Groongaドキュメントは、`reStructuredText (.rst)`_ または `Markdown (.md)`_ で書かれています。Groongaドキュメントのファイルは、``./doc/source`` 配下にあります。それぞれのページに対応した ``.rst`` ファイルまたは、 ``.md`` が必ず１つあります。例えば、この **導入** ページを編集したい場合は、``./doc/source/contribution/documentation/introduction.rst`` ファイルを編集すればよいです。編集したいファイルをみつけて、編集してください。"
 
 msgid "Update"
 msgstr "更新"
