doc news: add 14.0.1 entry

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,18 @@
 # News - 14 series
 
+(release-14-0-1)=
+## Release 14.0.1 - 2024-03-13
+
+### Fixes
+
+* Fixed a crash bug if a request is canceled between() or range search.
+
+* Fixed a but that highlight may return invalid result when the following conditions.
+
+  * We use multiple normalizers such as NormalizerTable and NormalizerNFKC150.
+
+  * We highlight string include whitespace.
+
 (release-14-0-0)=
 ## Release 14.0.0 - 2024-02-29
 
