--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,7 +7,7 @@
 
 * Fixed a crash bug if a request is canceled between() or range search.
 
-* Fixed a but that highlight may return invalid result when the following conditions.
+* Fixed a bug that highlight may return invalid result when the following conditions.
 
   * We use multiple normalizers such as NormalizerTable and NormalizerNFKC150.
 
