--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -5,12 +5,12 @@
 
 ### Fixes
 
-* Fixed a crash bug if a request is canceled between() or range search.
+* Fixed a crash bug if a request is canceled {doc}`/reference/functions/between` or range search.
 
   This bug doesn't necessarily occur. This bug occur when we cancel a request in the specific timing.
   This bug occur easily when search time is long such as sequential search.
 
-* Fixed a bug that highlight may return invalid result when the following conditions are met.
+* Fixed a bug that {doc}`/reference/functions/highlight_html` may return invalid result when the following conditions are met.
 
   * We use multiple normalizers such as NormalizerTable and NormalizerNFKC150.
   * We highlight string include whitespace.
