Add missing markup

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -12,7 +12,7 @@
 
 * Fixed a bug that {doc}`/reference/functions/highlight_html` may return invalid result when the following conditions are met.
 
-  * We use multiple normalizers such as NormalizerTable and NormalizerNFKC150.
+  * We use multiple normalizers such as `NormalizerTable` and `NormalizerNFKC150`.
   * We highlight string include whitespace.
 
   For example, this bug occur such as the following case.
