Add a missing item

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -3,6 +3,29 @@
 (release-14-0-1)=
 ## Release 14.0.1 - 2024-03-14
 
+### Improvements
+
+* [{doc}`/reference/commands/load`] Stopped reporting an error for key that becomes an empty key by normalization if we load data that empty string after normalize.
+
+  "-" becomes "" with NormalizerNFKC150("remove_symbol", true). So the following case reports a "empty key" error.
+
+  ```
+  table_create Values TABLE_HASH_KEY ShortText \
+    --normalizers 'NormalizerNFKC150("remove_symbol", true)'
+  table_create Data TABLE_NO_KEY
+  column_create Data value COLUMN_SCALAR Values
+  load --table Data
+  [
+  {"value": "-"}
+  ]
+  ```
+
+  However, if we many load in such data, many error log are generated.
+  Because Groonga output many "empty key" error because of Groonga can't regist empty string to index.
+
+  No problem even if empty string can't register to index in such case.
+  Because we don't match anything even if we search by empty string.
+
 ### Fixes
 
 * Fixed a crash bug if a request is canceled {doc}`/reference/functions/between` or range search.
