--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -5,7 +5,7 @@
 
 ### Improvements
 
-* [{doc}`/reference/commands/load`] Stopped reporting an error for key that becomes an empty key by normalization.
+* [{doc}`/reference/commands/load`] Stopped reporting an error when we `load` key that becomes an empty key by normalization.
 
   "-" becomes "" with NormalizerNFKC150("remove_symbol", true). So the following case reports a "empty key" error.
 
