--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -24,7 +24,7 @@
   Because Groonga output many "empty key" error because of Groonga can't regist empty string to index.
 
   No problem even if empty string can't register to index in such case.
-  Because we don't match anything even if we search by empty string.
+  Because we don't match anything even if we search by empty string. So, we stop reporting an "empty key" error in such case.
 
 ### Fixes
 
