Add missing markup

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,7 +7,7 @@
 
 * [{doc}`/reference/commands/load`] Stopped reporting an error when we `load` key that becomes an empty key by normalization.
 
-  "-" becomes "" with NormalizerNFKC150("remove_symbol", true). So the following case reports a "empty key" error.
+  `"-"` becomes `""` with `NormalizerNFKC150("remove_symbol", true)`. So the following case reports a "empty key" error.
 
   ```
   table_create Values TABLE_HASH_KEY ShortText \
@@ -20,7 +20,7 @@
   ]
   ```
 
-  However, if we many load in such data, many error log are generated.
+  However, if we many `load` in such data, many error log are generated.
   Because Groonga output many "empty key" error because of Groonga can't regist empty string to index.
 
   No problem even if empty string can't register to index in such case.
