--- a/doc/locale/ja/LC_MESSAGES/news/14.po
+++ b/doc/locale/ja/LC_MESSAGES/news/14.po
@@ -20,6 +20,21 @@ msgstr "お知らせ - 14系"
 msgid "Release 14.0.1 - 2024-03-14"
 msgstr "14.0.1リリース - 2024-03-14"
 
+msgid "Improvements"
+msgstr "改良"
+
+msgid "[{doc}`/reference/commands/load`] Stopped reporting an error when we `load` key that becomes an empty key by normalization."
+msgstr "[{doc}`/reference/commands/load`] ノーマライズによって空のキーとなったキーを`load`する時のエラーを止めました。"
+
+msgid "`\"-\"` becomes `\"\"` with `NormalizerNFKC150(\"remove_symbol\", true)`. So the following case reports a \"empty key\" error."
+msgstr "`\"-\"` は、`NormalizerNFKC150(\"remove_symbol\", true)` によって `\"\"` になります。そのため、以下のケースでは\"empty key\"エラーが報告されます。"
+
+msgid "However, if we many `load` in such data, many error log are generated. Because Groonga output many \"empty key\" error because of Groonga can't regist empty string to index."
+msgstr "しかし、このようなデータを大量に`load`した場合、多くのエラーログが生成されます。Groongaは空の文字列をインデックスに登録できないため、\"empty key\"エラーを大量に出力するためです。"
+
+msgid "No problem even if empty string can't register to index in such case. Because we don't match anything even if we search by empty string. So, we stop reporting an \"empty key\" error in such case."
+msgstr "ただ、このようなケースで空の文字列がインデックスへ登録できなくても問題ありません。空の文字列で検索しても何も一致しないためです。そのため、このようなケースの時に\"empty key\"エラーを報告するのを止めました。"
+
 msgid "Fixes"
 msgstr "修正"
 
@@ -46,9 +61,6 @@ msgstr "14.0.0リリース - 2024-02-29"
 
 msgid "This is a major version up! But It keeps backward compatibility. We can upgrade to 14.0.0 without rebuilding database."
 msgstr "メジャーバージョンアップです! メジャーバージョンアップですが、互換性は壊れていないので、データベースを再構築することなく14.0.0へアップグレードできます。"
-
-msgid "Improvements"
-msgstr "改良"
 
 msgid "Added a new tokenizer `TokenH3Index` (experimental)."
 msgstr "新しいトークナイザー`TokenH3Index`を追加しました。（実験的）"
