--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.0.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Thu, 14 Mar 2024 09:09:56 -0000
+
 groonga (14.0.0-1) unstable; urgency=low
 
   * New upstream release.
