doc news: fix a typo

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -21,7 +21,7 @@
   ```
 
   However, if we many `load` in such data, many error log are generated.
-  Because Groonga output many "empty key" error because of Groonga can't regist empty string to index.
+  Because Groonga output many "empty key" error because of Groonga can't register empty string to index.
 
   No problem even if empty string can't register to index in such case.
   Because we don't match anything even if we search by empty string. So, we stop reporting an "empty key" error in such case.
