doc news: add missing contents
Because This information is important by user that use Groonga on Ubuntu.

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -94,6 +94,13 @@
   ]
   ```
 
+* [{doc}`/install/ubuntu`] We become able to provide package for Ubuntu again.
+
+  We don't provide packages for Ubuntu in Groonga version 14.0.0.
+  Because we fail makeing Groonga package for Ubuntu by problrm of build environment for Ubuntu package.
+
+  We fixed problrm of build environment for Ubuntu package in 14.0.1. So, we can provide packages for Ubuntu again since this release.
+
 (release-14-0-0)=
 ## Release 14.0.0 - 2024-02-29
 
