--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -101,6 +101,12 @@
 
   We fixed problrm of build environment for Ubuntu package in 14.0.1. So, we can provide packages for Ubuntu again since this release.
 
+* Fixed build error when we build from source by using [`clang`](https://clang.llvm.org/). [GitHub#1738][Reported by windymelt]
+
+### Thanks
+
+* windymelt
+
 (release-14-0-0)=
 ## Release 14.0.0 - 2024-02-29
 
