--- a/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
@@ -76,8 +76,8 @@ msgstr "生成されたHTMLドキュメントは ``../groonga.doc/doc/ja/html/``
 msgid "How to edit documentation"
 msgstr "ドキュメントを編集する方法"
 
-msgid "The Groonga documentation is written in `reStructuredText (.rst)`_ or `Markdown (.md)`_ . These files are located in the ``doc/source``. Each page of the documentation corresponds to a ``.rst`` file or a ``.md`` file. By modifying the corresponding file, you can edit the target document. For Example, if you want to edit this **Introduction** page, you should edit the ``doc/source/contribution/documentation/introduction.rst`` file. Please find the file you wish to edit and make your changes."
-msgstr "Groongaドキュメントは、`reStructuredText (.rst)`_ または `Markdown (.md)`_ で書かれています。Groongaドキュメントのファイルは、``doc/source`` 配下にあります。それぞれのページに対応した ``.rst`` ファイルまたは、 ``.md`` が必ず１つあります。対応するファイルを変更することで、対象のドキュメントを編集できます。例えば、この **導入** ページを編集したい場合は、``doc/source/contribution/documentation/introduction.rst`` ファイルを編集すればよいです。編集したいファイルをみつけて、編集してください。"
+msgid "The Groonga documentation is written in `reStructuredText (.rst)`_ or `Markdown (.md)`_ . These files are located in the ``doc/source``. Each page of the documentation corresponds to a ``.rst`` file or a ``.md`` file. By modifying the corresponding file, you can edit the target document. For Example, if you want to edit this :doc:`introduction` page, you should edit the ``doc/source/contribution/documentation/introduction.rst`` file. Please find the file you wish to edit and make your changes."
+msgstr "Groongaドキュメントは、`reStructuredText (.rst)`_ または `Markdown (.md)`_ で書かれています。Groongaドキュメントのファイルは、``doc/source`` 配下にあります。それぞれのページに対応した ``.rst`` ファイルまたは、 ``.md`` が必ず１つあります。対応するファイルを変更することで、対象のドキュメントを編集できます。例えば、この :doc:`introduction` ページを編集したい場合は、``doc/source/contribution/documentation/introduction.rst`` ファイルを編集すればよいです。編集したいファイルをみつけて、編集してください。"
 
 msgid "Update"
 msgstr "更新"
