--- a/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
@@ -91,14 +91,11 @@ msgstr "変更を反映したHTMLを生成する"
 msgid "Preview the generated HTML in your browser"
 msgstr "ブラウザで生成されたHTMLを確認する"
 
-msgid "Execute the following command to generate HTML files that reflect your changes:"
-msgstr "次のコマンドで、変更を反映したHTMLファイルを生成します。"
+msgid "Use the following command to generate HTML files that reflect your changes. The generated files will be located in `../groonga.doc/doc/en/html/`. Each file corresponds to a `.rst` or `.md` file:"
+msgstr "次のコマンドで、変更を反映したHTMLファイルを生成します。生成されたファイルは、`../groonga.doc/doc/en/html/` 配下にあります。各 `.rst` または `.md` ファイルに対応するファイルが生成されています。"
 
-msgid "This command generates HTML files in the `../groonga.doc/doc/en/html/`. Each HTML file corresponds to a `.rst` or `.md` file."
-msgstr "このコマンドは、`../groonga.doc/doc/en/html/`配下にHTMLファイルを生成します。各`.rst`または`.md`ファイルに対応するHTMLファイルが生成されます。"
-
-msgid "Open the generated HTML file in your web browser to preview your changes. For example, if you have edited this {doc}`introduction` page, you can preview it by the following command:"
-msgstr "生成されたHTMLファイルをWebブラウザで開き、変更を確認できます。例えば、この {doc}`introduction` ページを編集した場合、次のコマンドで変更を確認できます。"
+msgid "Open the generated file in your web browser to preview your changes. For example, if you have edited this {doc}`introduction` page, you can preview it by the following command:"
+msgstr "生成されたファイルをWebブラウザで開き、変更を確認できます。例えば、この {doc}`introduction` ページを編集した場合、次のコマンドで変更を確認できます。"
 
 msgid "Update"
 msgstr "更新"
