--- a/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
@@ -85,16 +85,16 @@ msgstr "HTMLで変更を確認する"
 msgid "You can preview your documentation changes in your browser in HTML format. Follow these two steps."
 msgstr "HTML形式でドキュメントの変更をブラウザで確認できます。次の２つの手順に倣ってください。"
 
-msgid "Generate the HTML with your changes"
-msgstr "変更を反映したHTMLを生成する"
+msgid "Generate the HTML files with your changes"
+msgstr "変更を反映したHTMLファイルを生成する"
 
-msgid "Preview the generated HTML in your browser"
-msgstr "ブラウザで生成されたHTMLを確認する"
+msgid "Preview the generated HTML files in your Web browser"
+msgstr "Webブラウザで生成されたHTMLファイルを確認する"
 
 msgid "Use the following command to generate HTML files that reflect your changes. The generated files will be located in `../groonga.doc/doc/en/html/`. Each file corresponds to a `.rst` or `.md` file:"
 msgstr "次のコマンドで、変更を反映したHTMLファイルを生成します。生成されたファイルは、`../groonga.doc/doc/en/html/` 配下にあります。各 `.rst` または `.md` ファイルに対応するファイルが生成されています。"
 
-msgid "Open the generated file in your web browser to preview your changes. For example, if you have edited this {doc}`introduction` page, you can preview it by the following command:"
+msgid "Open the generated file in your Web browser to preview your changes. For example, if you have edited this {doc}`introduction` page, you can preview it by the following command:"
 msgstr "生成されたファイルをWebブラウザで開き、変更を確認できます。例えば、この {doc}`introduction` ページを編集した場合、次のコマンドで変更を確認できます。"
 
 msgid "Update"
