--- a/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
@@ -79,6 +79,24 @@ msgstr "ドキュメントを編集する方法"
 msgid "The Groonga documentation is written in [reStructuredText (.rst)](https://www.sphinx-doc.org/en/master/usage/restructuredtext/index.html) or [Markdown (.md)](https://myst-parser.readthedocs.io/en/latest/) . These files are located in the `doc/source`. Each page of the documentation corresponds to a `.rst` file or a `.md` file. By modifying the corresponding file, you can edit the target document. For Example, if you want to edit this {doc}`introduction` page, you should edit the `doc/source/contribution/documentation/introduction.rst` file. Please find the file you wish to edit and make your changes."
 msgstr "Groongaドキュメントは、[reStructuredText (.rst)](https://www.sphinx-doc.org/en/master/usage/restructuredtext/index.html) または [Markdown (.md)](https://myst-parser.readthedocs.io/en/latest/) で書かれています。Groongaドキュメントのファイルは、`doc/source` 配下にあります。それぞれのページに対応した `.rst` ファイルまたは、 `.md` が必ず１つあります。対応するファイルを変更することで、対象のドキュメントを編集できます。例えば、この {doc}`introduction` ページを編集したい場合は、`doc/source/contribution/documentation/introduction.rst` ファイルを編集すればよいです。編集したいファイルをみつけて、編集してください。"
 
+msgid "Preview changes on HTML files"
+msgstr "HTMLファイルで変更を確認する"
+
+msgid "You can preview your documentation changes in your browser in HTML format. Follow these two steps."
+msgstr "HTML形式でドキュメントの変更をブラウザで確認できます。次の２つの手順に倣ってください。"
+
+msgid "Generate the HTML files with your changes"
+msgstr "変更を反映したHTMLファイルを生成する"
+
+msgid "Preview the generated HTML files in your Web browser"
+msgstr "Webブラウザで生成されたHTMLファイルを確認する"
+
+msgid "Use the following command to generate HTML files that reflect your changes. The generated files will be located in `../groonga.doc/doc/en/html/`. Each file corresponds to a `.rst` or `.md` file:"
+msgstr "次のコマンドで、変更を反映したHTMLファイルを生成します。生成されたファイルは、`../groonga.doc/doc/en/html/` 配下にあります。各 `.rst` または `.md` ファイルに対応するファイルが生成されています。"
+
+msgid "Open the generated file in your Web browser to preview your changes. For example, if you have edited this {doc}`introduction` page, you can preview it by the following command:"
+msgstr "生成されたファイルをWebブラウザで開き、変更を確認できます。例えば、この {doc}`introduction` ページを編集した場合、次のコマンドで変更を確認できます。"
+
 msgid "Update"
 msgstr "更新"
 
