--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,24 @@
 # News - 14 series
 
+(release-14-0-2)=
+## Release 14.0.2 - 2024-03-29
+
+### Improvements
+
+* Reduced a log level of a log when Groonga setting normalizers/tokenizer/token_filters against temporary table.
+
+  For example, the target log of this modification is the following log.
+
+  ```
+  DDL:1234567890:set_normalizers NormalizerAuto
+  ```
+
+  PGroonga sets normalizers against temporary table on start. So, this log becomes noise.
+  Because this log become output when PGroonga start because of PGroonga's default log level is `notice`.
+
+  Therefore, we reduce log level to `debug` for the log since this release.
+  Thus, this log does not output when PGroonga start in default.
+
 (release-14-0-1)=
 ## Release 14.0.1 - 2024-03-14
 
