--- a/doc/locale/ja/LC_MESSAGES/news/14.po
+++ b/doc/locale/ja/LC_MESSAGES/news/14.po
@@ -30,7 +30,7 @@ msgid "For example, the target log of this modification is the following log."
 msgstr "例えば、この変更の対象のログは以下のようなログです。"
 
 msgid "PGroonga sets normalizers against temporary table on start. So, this log becomes noise. Because this log become output when PGroonga start because of PGroonga's default log level is `notice`."
-msgstr "PGroongaは起動時に一時テーブルに対してノーマライザーを設定するため、これらのログがノイズになっていました。このログのログレベルは`notice`なので、PGroonga起動時にこのログが出力されてしまうためです。"
+msgstr "PGroongaは起動時に一時テーブルに対してノーマライザーを設定するため、このログがノイズになっていました。このログのログレベルは`notice`なので、PGroonga起動時にこのログが出力されてしまうためです。"
 
 msgid "Therefore, we reduce log level to `debug` for the log since this release. Thus, this log does not output when PGroonga start in default."
 msgstr "そのため、今回のリリースからこのようなログのログレベルを`debug`にしました。これにより、デフォルトでは、PGroonga起動時にこのログが出力されないようになります。"
