--- a/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
@@ -110,7 +110,7 @@ msgid "Translate the documentation in `.edit.po` files"
 msgstr "`.edit.po` ファイル内のドキュメントを翻訳する"
 
 msgid "Reflect translations to `.po` files"
-msgstr ""
+msgstr "翻訳を `.po` ファイルに反映する"
 
 msgid "Use the following command to generate `.edit.po` files, which are translation files, corresponding to your changes. The generated files will be located in `../groonga.doc/doc/locale/${LANGUAGE}/LC_MESSAGES`. Each file corresponds to a `.rst` or `.md` file. Please add your translations to `.edit.po` files:"
 msgstr "次のコマンドで、翻訳用である `.edit.po` ファイルを生成します。生成されたファイルは `../groonga.doc/doc/locale/${LANGUAGE}/LC_MESSAGES` 配下にあります。各 `.rst` または `.md` ファイルに対応するファイルが生成されています。対応する `.edit.po` ファイルに翻訳を追加します。"
@@ -122,13 +122,13 @@ msgid "Please do not modify the `.rst` or `.md` files while adding translations 
 msgstr "`.edit.po` ファイルに翻訳を追加している最中に、翻訳元の `.rst` または `.md` ファイルを変更しないでください。翻訳した内容を `.po` ファイルに反映せずにを翻訳元を編集してしまうと、翻訳内容が消えてしまいます。翻訳元を編集したい場合は先に翻訳内容を `.po` ファイルに反映してください。反映方法は次のステップで紹介します。"
 
 msgid "After adding your translations to the `.edit.po` files, the next step is to reflect these translations to the `.po` files, which are the finalized translation files. These `.po` files are located in `doc/locale/${LANGUAGE}/LC_MESSAGES`. Each file corresponds to a `.rst` or `.md` file. If you want to edit your translations, edit the corresponding `.edit.po` file and then reflect your changes to the `.po` file."
-msgstr ""
+msgstr "`.edit.po` ファイルに翻訳を追加した後、最終的な翻訳ファイルである `.po` ファイルへ翻訳を反映するのが、次のステップになります。`.po` ファイルは、`doc/locale/${LANGUAGE}/LC_MESSAGES` 配下にあります。各 `.rst` または `.md` ファイルに対応しています。翻訳を編集したい場合は、対応する `.edit.po` ファイルを編集してから、変更内容を `.po` ファイルに反映し直す必要があります。"
 
 msgid "To reflect translations from the `.edit.po` files to the `.po` files, use the following command:"
-msgstr ""
+msgstr "次のコマンドで、翻訳内容を `.edit.po` ファイルから `.po` ファイルへ反映します。"
 
-msgid "For example, if you have added translations about the {doc}`introduction` page and then execute the command above, your translations will be reflected to `/doc/ja/LC_MESSAGES/contribution/documentation/introduction.po` file."
-msgstr ""
+msgid "For example, if you have added Japanese translations about the {doc}`introduction` page and then execute the command above, your translations will be reflected to `/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po` file."
+msgstr "例えば、この {doc}`introduction` ページの日本語訳を行い、上記のコマンドを実行した場合、翻訳内容は、`/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po` ファイルに反映されます。"
 
 msgid "Update"
 msgstr "更新"
