Split the long sentence into separate changes for clarity

--- a/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/documentation/introduction.po
@@ -121,8 +121,8 @@ msgstr "例えば、この {doc}`introduction` ページを編集して、日本
 msgid "Please do not modify the `.rst` or `.md` files while adding translations to the `.edit.po` files. Editing `.rst` or `.md` files without first reflecting the translations in `.po` files will result in the loss of those translations. If you want to edit `.rst` or `.md` files, ensure you first reflect your translations in `.po` files. The method to reflect translations will be introduced in the next step."
 msgstr "`.edit.po` ファイルに翻訳を追加している最中に、翻訳元の `.rst` または `.md` ファイルを変更しないでください。翻訳した内容を `.po` ファイルに反映せずにを翻訳元を編集してしまうと、翻訳内容が消えてしまいます。翻訳元を編集したい場合は先に翻訳内容を `.po` ファイルに反映してください。反映方法は次のステップで紹介します。"
 
-msgid "After adding your translations to the `.edit.po` files, the next step is to reflect these translations to the `.po` files, which are the finalized translation files. These `.po` files are located in `doc/locale/${LANGUAGE}/LC_MESSAGES`. Each file corresponds to a `.rst` or `.md` file. If you want to edit your translations, edit the corresponding `.edit.po` file and then reflect your changes to the `.po` file."
-msgstr "`.edit.po` ファイルに翻訳を追加した後、最終的な翻訳ファイルである `.po` ファイルへ翻訳を反映するのが、次のステップになります。`.po` ファイルは、`doc/locale/${LANGUAGE}/LC_MESSAGES` 配下にあります。各 `.rst` または `.md` ファイルに対応しています。翻訳を編集したい場合は、対応する `.edit.po` ファイルを編集してから、変更内容を `.po` ファイルに反映し直す必要があります。"
+msgid "After adding your translations to the `.edit.po` files, the next step is to reflect these translations to the `.po` files. `.po` files are the finalized translation files. These `.po` files are located in `doc/locale/${LANGUAGE}/LC_MESSAGES`. Each file corresponds to a `.rst` or `.md` file. If you want to edit your translations, edit the corresponding `.edit.po` file and then reflect your changes to the `.po` file."
+msgstr "`.edit.po` ファイルに翻訳を追加した後、`.po` ファイルへ翻訳を反映するのが、次のステップになります。`.po` ファイルは、最終的な翻訳ファイルになります。ファイルは、`doc/locale/${LANGUAGE}/LC_MESSAGES` 配下にあります。各 `.rst` または `.md` ファイルに対応しています。翻訳を編集したい場合は、対応する `.edit.po` ファイルを編集してから、変更内容を `.po` ファイルに反映し直す必要があります。"
 
 msgid "To reflect translations from the `.edit.po` files to the `.po` files, use the following command:"
 msgstr "次のコマンドで、翻訳内容を `.edit.po` ファイルから `.po` ファイルへ反映します。"
