doc news: add 14.0.3 entry

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,52 @@
 # News - 14 series
 
+(release-14-0-3)=
+## Release 14.0.3 - 2024-05-07
+
+記載中：（4/8までの変更はピックアップ済み）
+
+### Improvements
+
+* show ID of dangling reference
+
+  元々どんな時にでるログで、なんの情報を追加したのか。追加し情報はなんの役に立つのかを記載。
+  [column][remove][index] hook has a dangling reference: <Users.name> -> <Terms.index>(259)"
+
+* disable an optimization for large result set and GRN_OP_AND
+
+  どういうケースで速くなるのかを記載。注意点があるならそれも記載。
+  It's faster than the normal operation when result set doesn't have many records. But it's slower than the normal operation when result set has many records. We don't use this optimization for the latter case.
+
+* AND search optimization.
+
+  どういうケースで速くなるのかを記載。注意点があるならそれも記載。
+  If we need to delete records from result set by GRN_OP_AND, we need to call grn_table_delete_prepare() many times. It has GRN_HASH_EACH_BEGIN/END loop for all columns of a
+  result set. If the result set has no columns, we don't need to open empty cursors for many record deletions.
+
+* prefix search optimization.
+
+  どういうケースで速くなるのかを記載。注意点があるならそれも記載。
+  If we don't create intermediate table, it improves performance.
+  Note that this may change returned matched records order. But it's acceptable. Because the order is undefined. If users want stable ordered result, they need to sort the result explicitly.
+
+* optimize large result set case
+
+  どういうケースで速くなるのかを記載。注意点があるならそれも記載。
+  "A AND B" and update "A" may be a heavy process when "A" has many records and B has a few records. This changes it to "B AND A" and update "B".
+  This change is faster because we don't need to remove many records from "A". We just need to remove a few records from "B".
+
+
+### Fixes
+
+* [{doc}`/reference/commands/request_cancel`] Fix a crash bug when we execute `request_cancel` command whlie we execute the other query.
+
+  request_cancelでクエリーを中断するとクラッシュすることがある問題を修正したことを記載。
+
+* supress grn_output_range_normalize failed
+
+  filter後に範囲外のpost-filterを実行するとエラー応答になる問題を修正したことを記載。具体例もつける。
+
+
 (release-14-0-2)=
 ## Release 14.0.2 - 2024-03-29
 
