--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,51 +1,96 @@
 # News - 14 series
 
 (release-14-0-3)=
-## Release 14.0.3 - 2024-05-07
-
-記載中：（4/8までの変更はピックアップ済み）
+## Release 14.0.3 - 2024-05-08
 
 ### Improvements
 
-* show ID of dangling reference
+* 以下の最適化を行いました
 
-  元々どんな時にでるログで、なんの情報を追加したのか。追加し情報はなんの役に立つのかを記載。
-  [column][remove][index] hook has a dangling reference: <Users.name> -> <Terms.index>(259)"
+  * ヒット数が多いときのOR検索とAND検索の速度を向上しました。
 
-* disable an optimization for large result set and GRN_OP_AND
+  * 前方一致検索（`@^`を使った検索）の速度を向上しました。
 
-  どういうケースで速くなるのかを記載。注意点があるならそれも記載。
-  It's faster than the normal operation when result set doesn't have many records. But it's slower than the normal operation when result set has many records. We don't use this optimization for the latter case.
+  * 特定のケースでAND検索の速度を向上しました。
 
-* AND search optimization.
+    `A AND B`という条件で`A`のレコード数が`B`よりも多い時の速度を向上しています。
+    `B AND A`のようにレコード数が少ない方から処理するようにしました。
 
-  どういうケースで速くなるのかを記載。注意点があるならそれも記載。
-  If we need to delete records from result set by GRN_OP_AND, we need to call grn_table_delete_prepare() many times. It has GRN_HASH_EACH_BEGIN/END loop for all columns of a
-  result set. If the result set has no columns, we don't need to open empty cursors for many record deletions.
+  * 動的カラムを多数設定しているときの検索速度を向上しました。
 
-* prefix search optimization.
+* [{doc}`/reference/tokenizers/tokenngram`] Add new option `ignore_blank`.
 
-  どういうケースで速くなるのかを記載。注意点があるならそれも記載。
-  If we don't create intermediate table, it improves performance.
-  Note that this may change returned matched records order. But it's acceptable. Because the order is undefined. If users want stable ordered result, they need to sort the result explicitly.
+  We can replace `TokenBigramIgnoreBlank` with `TokenNgram("ignore_blank", true)` as below.
 
-* optimize large result set case
+  ```
+  (具体例)
+  ```
 
-  どういうケースで速くなるのかを記載。注意点があるならそれも記載。
-  "A AND B" and update "A" may be a heavy process when "A" has many records and B has a few records. This changes it to "B AND A" and update "B".
-  This change is faster because we don't need to remove many records from "A". We just need to remove a few records from "B".
-
+* [{doc}`/install/ubuntu`] Add support for Ubuntu 24.04 LTS (Noble Numbat).
 
 ### Fixes
 
 * [{doc}`/reference/commands/request_cancel`] Fix a crash bug when we execute `request_cancel` command whlie we execute the other query.
 
-  request_cancelでクエリーを中断するとクラッシュすることがある問題を修正したことを記載。
+  `request_cancel`でクエリーを中断するとクラッシュすることがある問題を修正しました。
 
-* supress grn_output_range_normalize failed
+* Supress grn_output_range_normalize failed
 
-  filter後に範囲外のpost-filterを実行するとエラー応答になる問題を修正したことを記載。具体例もつける。
+  以下のように、`--post_filter`実行時に`--offset`の値が範囲外になった場合にエラーになる問題を修正しました。
+  `--filter`と`--offset`の組み合わせでは、エラーにならないため、`--filter`と`--post_filter`で挙動が異なっていました。
 
+  ```
+  (具体例)
+  ```
+
+* 近傍フレーズ直積検索で`(...)`内のすべてのフレーズがマッチしない場合に、誤った検索結果を返す場合がある問題を修正しました。
+
+  例えば以下の、`--query '*NPP1"(a) (2)"'`で指定している`(2)`にマッチするレコードがありません。
+  この場合は、何もヒットしないのが正しい挙動ですが、`--query '*NPP1"(a)`相当の挙動になっていました。
+  つまり、`(2)`にマッチするレコードが無いにも関わらず、`ax1`と`axx1`がヒットしていました。
+
+  ```
+  table_create Entries TABLE_NO_KEY
+  column_create Entries content COLUMN_SCALAR Text
+
+  table_create Terms TABLE_PAT_KEY ShortText   --default_tokenizer TokenNgram
+  column_create Terms entries_content COLUMN_INDEX|WITH_POSITION Entries content
+  load --table Entries
+  [
+  {"content": "ax1"},
+  {"content": "axx1"}
+  ]
+
+  select Entries
+    --match_columns content
+    --query '*NPP1"(a) (2)"'
+    --output_columns 'content'
+  ```
+
+* TABLE_HASH_KEYのテーブルに2^28以上のレコードが存在する時に、リハッシュが発生するとデータが破損するか、リハッシュが失敗する問題を修正しました。
+
+* 以下の条件の時にハイライト位置がずれることがある問題を修正しました。
+
+  * ハイライト対象の文字にマルチバイト文字が含まれる場合
+
+  * ハイライト対象の文字の前にスペースがある場合
+
+  * 全角スペースと`TokenNgram("loose_blank", true)`を同時に使用した場合
+
+  * ハイライト対象の文字列の先頭にスペースがある場合
+
+  * ` a `のようにハイライト対象の文字の前後にスペースがある場合
+
+  * ハイライト対象の文字列の2番目に全角スペースがある場合
+
+  * ハイライト対象の文字列に`${SPACE}${CHARACTER}${FULL_WIDTH_SPACE}${CHARACTER}`という並びが含まれる場合
+
+* 以下の条件の時にスペースの前のアルファベットがハイライトされないことがある問題を修正しました。
+
+  * Highlight target: "${ALPHABETS}${SPACE}${MULTIBYTE_CHARACTERS}"
+  * Query: "${ALPHABETS}${SPACE}${ONE_MULTIBYTE_CHARACTER}"
+  * Tokenizer: TokenNgram
+  * Normalizer: NormalizerNFKC*.
 
 (release-14-0-2)=
 ## Release 14.0.2 - 2024-03-29
