Translate to English.

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -100,22 +100,37 @@
 
 * [{doc}`/reference/commands/request_cancel`] Fix a crash bug when we execute `request_cancel` command whlie we execute the other query.
 
-  `request_cancel`でクエリーを中断するとクラッシュすることがある問題を修正しました。
-
 * Supress grn_output_range_normalize failed
 
-  以下のように、`--post_filter`実行時に`--offset`の値が範囲外になった場合にエラーになる問題を修正しました。
-  `--filter`と`--offset`の組み合わせでは、エラーにならないため、`--filter`と`--post_filter`で挙動が異なっていました。
+  Fixed the unexpected error when using `--post_filter` with `--offset` greater than the post-filtered result.
+  In the same situation, using `--filter` with `--offset` doesn't raise the error.
+  This inconsistency in behavior between `--filter` and `--post-filter` has now been resolved.
 
   ```
-  (具体例)
+  table_create Users TABLE_PAT_KEY ShortText
+  column_create Users age COLUMN_SCALAR UInt32
+  load --table Users
+  [
+    ["_key", "age"],
+    ["Alice", 21],
+    ["Bob", 22],
+    ["Chris", 23],
+    ["Diana", 24],
+    ["Emily", 25]
+  ]
+  select Users \
+    --filter 'age >= 22' \
+    --post_filter 'age <= 24' \
+    --offset 3 \
+    --sort_keys -age
+  [[0,0.0,0.0],[[[3],[["_id","UInt32"],["_key","ShortText"],["age","UInt32"]]]]]  
   ```
 
-* 近傍フレーズ直積検索で`(...)`内のすべてのフレーズがマッチしない場合に、誤った検索結果を返す場合がある問題を修正しました。
+* Fixed a bug where incorrect search result could be returned when not all phrases within `(...)` matched using Near phrase product.
 
-  例えば以下の、`--query '*NPP1"(a) (2)"'`で指定している`(2)`にマッチするレコードがありません。
-  この場合は、何もヒットしないのが正しい挙動ですが、`--query '*NPP1"(a)`相当の挙動になっていました。
-  つまり、`(2)`にマッチするレコードが無いにも関わらず、`ax1`と`axx1`がヒットしていました。
+  For example, there is no record which matched `(2)` condition using `--query '*NPP1"(a) (2)"'`.
+  In this case, the expected behavior would be return no record. However, the actual behavior was equal to the query `--query '*NPP and "(a)"`.
+  This means that despite no records matched `(2)`, records like `ax1` and `axx1` were incorrectly returned.
 
   ```
   table_create Entries TABLE_NO_KEY
@@ -135,25 +150,25 @@
     --output_columns 'content'
   ```
 
-* TABLE_HASH_KEYのテーブルに2^28以上のレコードが存在する時に、リハッシュが発生するとデータが破損するか、リハッシュが失敗する問題を修正しました。
+* Fixed a bug that rehash failed or Groonga's data broke when records existed 2^28 or more in table with `TABLE_HASH_KEY`.
 
-* 以下の条件の時にハイライト位置がずれることがある問題を修正しました。
+* Fixed a bug that highlight position slipped out of place in the following cases.
 
-  * ハイライト対象の文字にマルチバイト文字が含まれる場合
+  * If highlight target charcters include multibyte character.(要確認)
 
-  * ハイライト対象の文字の前にスペースがある場合
+  * If white space existed before highlight target charcters.
 
-  * 全角スペースと`TokenNgram("loose_blank", true)`を同時に使用した場合
+  * If we used `TokenNgram("loose_blank", true)` and if highlight target charcters included full width space.
 
-  * ハイライト対象の文字列の先頭にスペースがある場合
+  * If white space existed in the front of highlight target charcters.
 
-  * ` a `のようにハイライト対象の文字の前後にスペースがある場合
+  * If white space existed in front and behind of highlight target charcters like ` a `.
 
-  * ハイライト対象の文字列の2番目に全角スペースがある場合
+  * If the second charcter of highlight target was full width space.
 
-  * ハイライト対象の文字列に`${SPACE}${CHARACTER}${FULL_WIDTH_SPACE}${CHARACTER}`という並びが含まれる場合
+  * If the order of highlight target charcters was such as `${SPACE}${CHARACTER}${FULL_WIDTH_SPACE}${CHARACTER}`.
 
-* 以下の条件の時にスペースの前のアルファベットがハイライトされないことがある問題を修正しました。
+* Fix a bug that alphabet before white space may not highlight in the following cases.
 
   * Highlight target: "${ALPHABETS}${SPACE}${MULTIBYTE_CHARACTERS}"
   * Query: "${ALPHABETS}${SPACE}${ONE_MULTIBYTE_CHARACTER}"
