Use more suitable English

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -19,7 +19,7 @@
 
   We can replace `TokenBigramIgnoreBlank` with `TokenNgram("ignore_blank", true)` as below.
 
-  e.g) If we use `TokenBigram`.
+  Here is example of use `TokenBigram`.
 
   ```
   tokenize TokenBigram "! ! !" NormalizerAuto
@@ -52,7 +52,7 @@
   ]
   ```
 
-  e.g) If we use `TokenBigramIgnoreBlank`.
+  Here is example of use `TokenBigramIgnoreBlank`.
 
   ```
   tokenize TokenBigramIgnoreBlank "! ! !" NormalizerAuto
@@ -73,7 +73,7 @@
   ]
   ```
 
-  e.g) If we use `TokenNgram("ignore_blank", true)`.
+  Here is example of use `TokenNgram("ignore_blank", true)`.
 
   ```
   tokenize 'TokenNgram("ignore_blank", true)' "! ! !" NormalizerAuto
