--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -102,7 +102,7 @@
 
 * Supress grn_output_range_normalize failed
 
-  Fixed the unexpected error when using `--post_filter` with `--offset` greater than the post-filtered result.
+  Fixed the unexpected error when using `--post_filter` with `--offset` greater than the post-filtered result as below.
   In the same situation, using `--filter` with `--offset` doesn't raise the error.
   This inconsistency in behavior between `--filter` and `--post-filter` has now been resolved.
 
@@ -126,10 +126,10 @@
   [[0,0.0,0.0],[[[3],[["_id","UInt32"],["_key","ShortText"],["age","UInt32"]]]]]  
   ```
 
-* Fixed a bug where incorrect search result could be returned when not all phrases within `(...)` matched using Near phrase product.
+* Fixed a bug where incorrect search result could be returned when not all phrases within `(...)` matched using near phrase product.
 
   For example, there is no record which matched `(2)` condition using `--query '*NPP1"(a) (2)"'`.
-  In this case, the expected behavior would be return no record. However, the actual behavior was equal to the query `--query '*NPP and "(a)"`.
+  In this case, the expected behavior would be return no record. However, the actual behavior was equal to the query `--query '*NPP and "(a)"` as below.
   This means that despite no records matched `(2)`, records like `ax1` and `axx1` were incorrectly returned.
 
   ```
