Use more suitable English

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -98,11 +98,10 @@
 
 ### Fixes
 
-* [{doc}`/reference/commands/request_cancel`] Fix a crash bug when we execute `request_cancel` command whlie we execute the other query.
+* [{doc}`/reference/commands/request_cancel`] Fix a bug that Groonga may crash when we execute `request_cancel` command whlie we execute the other query.
 
-* Supress grn_output_range_normalize failed
+* Fixed the unexpected error when using `--post_filter` with `--offset` greater than the post-filtered result
 
-  Fixed the unexpected error when using `--post_filter` with `--offset` greater than the post-filtered result as below.
   In the same situation, using `--filter` with `--offset` doesn't raise the error.
   This inconsistency in behavior between `--filter` and `--post-filter` has now been resolved.
 
@@ -190,7 +189,7 @@
   ]
   ```
 
-* Fixed a bug that rehash failed or Groonga's data broke when records existed 2^28 or more in table with `TABLE_HASH_KEY`.
+* Fixed a bug that rehash failed or data in a table broke when rehash occured that the table with `TABLE_HASH_KEY` has  2^28 or more records.
 
 * Fixed a bug that highlight position slipped out of place in the following cases.
 
